users are now able to send transactions to others